# ctensors

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
examples/: mmap.c  read.c
lib/: ctensors.h  ctensors_fclose.c  ctensors_fclose.h  ctensors_fopen.c  ctensors_fopen.h  ctensors_fread_table.c  ctensors_fread_table.h  ctensors_header_parse.c  ctensors_header_parse.h  ctensors_mmap.c  ctensors_mmap.h  ctensors_mmap_table.c  ctensors_mmap_table.h  ctensors_table_get_tensor.c  ctensors_table_get_tensor.h  ctensors_table_read.c  ctensors_table_read.h  ctensors_types.c  ctensors_types.h  safetensors.h  safetensors_errors.c  safetensors_errors.h  safetensors_fclose.c  safetensors_fclose.h  safetensors_fopen.c  safetensors_fopen.h  safetensors_fread_table.c  safetensors_fread_table.h  safetensors_header_parse.c  safetensors_header_parse.h  safetensors_mmap.c  safetensors_mmap.h  safetensors_mmap_table.c  safetensors_mmap_table.h  safetensors_mmap_unix.c  safetensors_mmap_unix.h  safetensors_table_get_tensor.c  safetensors_table_get_tensor.h  safetensors_table_read.c  safetensors_table_read.h  (+2 more)
